[gd_scene load_steps=3 format=3 uid="uid://bkxxlunw45fvh"]

[ext_resource type="Script" path="res://Arrow-Physics-Test/Scenes/arrow_launcher.gd" id="1_7oaub"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4opo0"]
size = Vector2(200, 200)

[node name="Arrow Launcher" type="Area2D"]
script = ExtResource("1_7oaub")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4opo0")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
